# local-agentops

./: .env  .env.example  Makefile  README.md  pyproject.toml
app/: __init__.py  main.py
app/api/: README.md  routes.py
app/chunking/: README.md  __init__.py  service.py  strategies.py  utils.py
app/core/: README.md  __init__.py  config.py  logging.py
app/evaluation/: README.md  __init__.py  service.py  validation.py
app/generation/: README.md  __init__.py  backends.py  prompting.py  service.py
app/indexing/: README.md  __init__.py  backends.py  models.py  service.py
app/ingestion/: README.md  __init__.py  discovery.py  errors.py  loaders.py  metadata.py  models.py  service.py
app/models/: README.md  __init__.py  schemas.py
app/orchestration/: README.md  __init__.py  router.py  service.py
app/parsing/: README.md  __init__.py  errors.py  normalization.py  parsers.py  pdf.py  service.py
app/retrieval/: README.md  __init__.py  backends.py  embeddings.py  service.py
app/storage/: README.md  __init__.py  backends.py  models.py  service.py
app/utils/: README.md  (+1 more)
docs/: README.md
local_agentops.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: README.md  index_chunks.py  run_benchmark.py  run_generation_demo.py  run_retrieval.py
tests/: test_api_endpoints.py  test_app_imports.py  test_chunking_pipeline.py  test_config_and_schemas.py  test_evaluation_validation.py  test_generation_service.py  test_ingestion_pipeline.py  test_orchestration_service.py  test_parsing_pipeline.py  test_retrieval_service.py  test_storage_and_indexing_pipeline.py
(+12 files in other folders)
