[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-agentops"
version = "0.1.0"
description = "Local-first AI Knowledge Ops platform scaffold."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Ayush Gupta" }
]
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "pypdf>=5.1.0,<6.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "rank-bm25>=0.2.2,<1.0.0",
  "sentence-transformers>=3.0.0,<4.0.0",
  "faiss-cpu>=1.8.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "ruff>=0.6.0,<1.0.0",
  "mypy>=1.11.0,<2.0.0",
]

[tool.setuptools]
packages = [
  "app",
  "app.api",
  "app.core",
  "app.ingestion",
  "app.parsing",
  "app.chunking",
  "app.indexing",
  "app.retrieval",
  "app.orchestration",
  "app.generation",
  "app.evaluation",
  "app.storage",
  "app.models",
  "app.utils",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["app"]
